# unicount

./: CHANGELOG.md  Makefile.md  README.md
cli/: Cargo.toml  README.md
cli/src/: main.rs
cli/t/: README.md
lib/: Cargo.toml  README.md
lib/src/: lib.rs
lib/tests/: integration.rs
t/: README.md
