[package]
name = "unicount"
version = "0.2.1"
edition = "2024"
repository = "https://github.com/qtfkwk/unicount"
description = "Alphabetic counter supporting unicode"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive", "wrap_help"] }
clap-cargo = "0.18.3"
unescaper = "0.1.6"
unicount-lib = { version = "0.2.1", path = "../lib" }
