[package]
name = "unicount"
version = "0.2.5"
edition = "2024"
repository = "https://github.com/qtfkwk/unicount"
description = "Alphabetic counter supporting unicode"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
clap-cargo = "0.18.3"
unescaper = "0.1.8"
unicount-lib = { version = "0.2.5", path = "../lib" }
