[package]
name = "unicount-lib"
version = "0.2.4"
edition = "2024"
repository = "https://github.com/qtfkwk/unicount"
description = "Alphabetic counter supporting unicode"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
unicode-segmentation = "1.12.0"
