[package]
name = "unicount-lib"
version = "0.2.5"
edition = "2024"
repository = "https://github.com/qtfkwk/unicount"
description = "Alphabetic counter supporting unicode"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
unicode-segmentation = "1.13.2"
